13) init.d: direct call regenerate route/iptables rules and switch bootlevel instead iptables call.<br>
14) init.d: rename web init to switchstage and drop goahead dependency start second init stage.<br>
15) init.d: use user configured ipv6 dns in static mode and as fallback for dhcp mode.<br>
16) init.d: fix not set MTU to WAN regression.<br>
17) kernel: mips: fix possible corruption of cache mode by mprotect.<br>
18) kernel: mips: fix siginfo.h to use strict posix types.<br>
19) kernel: mips: remove cpu_has_safe_index_cacheops.<br>
20) kernel: mips: dma-default: defend against NULL dev in massage_gfp_flags.<br>
21) kernel: mips: prevent hitting do_notify_resume() with !user_mode(regs).<br>
22) kernel: mips: fix harmlessly missing else statement.<br>
23) kernel: cdc_ncm: workaround for EM7455 silent data interface.<br>
24) kernel: net: tcp: increase size at which tcp_bound_to_half_wnd bounds to > TCP_MSS_DEFAULT.<br>
25) kernel: net: net/core: revert net: fix __netdev_update_features return.. and add comment.<br>
26) kernel: net: neigh: only allow init_net to change the default neigh_parms.<br>
27) kernel: net: neigh: netlink notification for administrative NUD state change.<br>
28) kernel: net: neigh: directly goto out after setting nud_state to NUD_FAILED.<br>
29) kernel: net: neigh: recompute reachabletime before returning from neigh_periodic_work().<br>
30) kernel: net: ppp: defer netns reference release for ppp channel.<br>
31) kernel: net: netfilter: nf_conntrack_h323: fix off-by-one in DecodeQ931.<br>
32) kernel: net: ipv4: af_inet: make it explicitly non-modular.<br>
33) kernel: net: graceful exit from netif_alloc_netdev_queues().<br>
34) kernel: net: ipv6: slight optimization in ip6_dst_gc.<br>
35) kernel: net: ipv6: make ip -6 route get mark xyz work.<br>
36) kernel: net: ipv6: update Destination Cache entries when gateway turn into host.<br>
37) kernel: net: ipv6: fix RTPROT_RA markup of RA routes w/nexthops.<br>
<br>
<br>
<br>