@@ -2229,6 +2229,7 @@
 35) kernel: net: ipv6: make ip -6 route get mark xyz work.<br>
 36) kernel: net: ipv6: update Destination Cache entries when gateway turn into host.<br>
 37) kernel: net: ipv6: fix RTPROT_RA markup of RA routes w/nexthops.<br>
+38) kernel: net: ipv6: pass neighbours and dest address into NETEVENT_REDIRECT events.<br>
 <br>
 <br>
 <br>
